--- a/.gitignore
+++ b/.gitignore
@@ -525,3 +525,4 @@ Demo1/Assets/Textures/WoodenPlank_01_occlusion.tga.meta
 Demo1/Assets/UI.meta
 Demo1/Assets/UI/Dwarf.png
 Demo1/Assets/UI/Dwarf.png.meta
+Demo1/Assets/Scenes/Hua/Hua.unity
